# Video-writer-oCam

./: CMakeLists.txt  writer.cpp
